--- a/GameFiles/GameFiles.csproj
+++ b/GameFiles/GameFiles.csproj
@@ -228,8 +228,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AnimationManager.cs" />
+    <Compile Include="Assets\BasicStats.cs" />
+    <Compile Include="Assets\EnemyAI.cs" />
     <Compile Include="Assets\PlayerAttack.cs" />
     <Compile Include="Assets\PlayerController.cs" />
+    <Compile Include="Assets\RushAI.cs" />
+    <Compile Include="Assets\ZoneRelay.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
