"Super Boss" Creation Animation
Creation animation for the "Super Boss"
Basic Enemies placed throughout the rooms
All zones setup
Runs well as of now

BUGS: Enemies can spawn inside of the walls.

--- a/GameFiles/GameFiles.csproj
+++ b/GameFiles/GameFiles.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Assets\AnimationManager.cs" />
     <Compile Include="Assets\BasicStats.cs" />
     <Compile Include="Assets\EnemyAI.cs" />
+    <Compile Include="Assets\EnemyManagement.cs" />
     <Compile Include="Assets\PlayerAttack.cs" />
     <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\RushAI.cs" />
