--- a/GameFiles/GameFiles.csproj
+++ b/GameFiles/GameFiles.csproj
@@ -229,6 +229,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\AnimationManager.cs" />
+    <Compile Include="Assets\Attack2SuperBoss.cs" />
     <Compile Include="Assets\BasicStats.cs" />
     <Compile Include="Assets\EnemyAI.cs" />
     <Compile Include="Assets\EnemyManagement.cs" />
