--- a/GameFiles/GameFiles.csproj
+++ b/GameFiles/GameFiles.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Assets\PlayerAttack.cs" />
     <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\RushAI.cs" />
+    <Compile Include="Assets\SoundManager.cs" />
     <Compile Include="Assets\SuperBossAI.cs" />
     <Compile Include="Assets\ZoneRelay.cs" />
   </ItemGroup>
