--- a/GameFiles/GameFiles.csproj
+++ b/GameFiles/GameFiles.csproj
@@ -217,15 +217,6 @@
     <Reference Include="UnityEngine.Purchasing">
       <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Common">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\AnimationManager.cs" />
@@ -236,6 +227,7 @@
     <Compile Include="Assets\PlayerAttack.cs" />
     <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\RushAI.cs" />
+    <Compile Include="Assets\SceneManager.cs" />
     <Compile Include="Assets\SoundManager.cs" />
     <Compile Include="Assets\SuperBossAI.cs" />
     <Compile Include="Assets\ZoneRelay.cs" />
